2048-game/2048-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: "2048"
  name: "2048-deploy"
  namespace: "2048-game"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "2048"
  template:
    metadata:
      labels:
        app: "2048"
    spec:
      containers:
        - name: docker-2048
          image: alexwhen/docker-2048
          imagePullPolicy: Always
          ports:
            - containerPort: 80
