2048-game/2048-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: "svc-2048"
  namespace: "2048-game"
spec:
  type: ClusterIP
  # type: NodePort
  selector:
    app: "2048"
  ports:
  - port: 80
    targetPort: 80
